--- a/index.html
+++ b/index.html
@@ -11,144 +11,6 @@
 
     <!-- Custom styles for this template -->
     <link href="css\style.css" rel="stylesheet" />
-    <style>
-        /*About Me*/
-        main .content .about-container {
-            display: flex;
-            justify-content: center;
-        }
-
-        main .content .about-item {
-            display: flex;
-            flex: wrap;
-            justify-content: center;
-            gap: 10px;
-            width: 50%;
-            margin-bottom: 20px;
-            padding: 10px;
-        }
-
-        main .content .about-item img {
-            height: 100px;
-            width: auto;
-            border-radius: 8px;
-            margin-bottom: 10px;
-        }
-
-        /*End About Me*/
-
-
-        /* contacts */
-        main section .contacts-container {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            gap: 10px;
-            max-width: 1000px;
-            padding: 20px;
-            background-color: #f9f9f9;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba (0, 0, 0, 0.1);
-        }
-
-        main section .content-title {
-            /* margin-top: 50px; */
-            text-align: center;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        main section .content-title .title {
-            margin-block: 1rem;
-            color: #1A4D2E;
-        }
-
-        main section .content-title .tagline {
-            margin-block: 1rem;
-            color: #f89646;
-        }
-
-        main section .content-title .desc {
-            font-size: 16px;
-            line-height: 1.7rem;
-        }
-
-        main section .contact-image {
-            flex: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        main section .contact-image img {
-            width: 100%;
-            max-width: 250px;
-            height: auto;
-            border-radius: 10px;
-        }
-
-        main section .contacts-box {
-            flex: 2;
-            padding: 20px;
-            max-width: 800px;
-            margin: 50px auto;
-            border-radius: 10px;
-        }
-
-        main section .contacts-box button {
-            padding: 0.5rem 2.5rem;
-            width: 100%;
-            font-weight: 600;
-        }
-
-        main section .contacts-box main section .form-group {
-            margin-bottom: 20px;
-        }
-
-        main section .contacts-box label {
-            display: block;
-            margin-bottom: 5px;
-            color: #1A4D2E;
-            font-weight: 600;
-            font-size: 16px;
-        }
-
-        main section .contacts-box input[type="text"],
-        main section .contacts-box input[type="email"],
-        main section .contacts-box textarea {
-            width: 100%;
-            padding: 10px;
-            border: none;
-            background-color: rgba(226, 232, 240, 0.5);
-            border-radius: 5px;
-        }
-
-        main section .contacts-box textarea {
-            resize: vertical;
-        }
-
-        main section .contacts-box a {
-            padding: 10px 30px;
-            background-color: #659287;
-            color: #ffffff;
-            border-radius: 0;
-            border: 1px solid #659287;
-            -webkit-transition: all .2s;
-            transition: all .2s;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-decoration: none;
-            text-align: center;
-            font-size: 14px;
-        }
-
-        main section .contacts-box a:hover {
-            background-color: transparent;
-            color: #659287;
-        }
-
-        /* end contacts */
     </style>
 </head>
 
@@ -157,8 +19,8 @@
     <header class="navbar-container">
         <div class="nama-brand">
             <span>
-                <img src="img/logo.png" alt="">
-                Pertanian
+                <img src="img/logo.png" alt="Flowfy">
+                Flowfy
             </span>
         </div>
         <nav>
@@ -186,7 +48,7 @@
             <div class="welcome">
                 <div class="detail-box">
                     <h1 class="title">Selamat Datang <br>
-                        di Perusahaan Tanaman</h1>
+                        di Flowfy </h1>
                     <p>
                         Temukan berbagai informasi mengenai tanaman, budidaya dan harga di sini.
                     </p>
@@ -200,7 +62,7 @@
                     </div>
                 </div>
                 <div class="img-box">
-                    <img src="img\pertanian-welcome.jpg" alt="">
+                    <img src="img\pertanian-welcome.jpg" alt="pertanian">
                 </div>
             </div>
         </section>
@@ -221,7 +83,7 @@
                 <div class="info-container">
                     <div class="box">
                         <div class="img-box">
-                            <img src="img\info-straw.webp" alt="">
+                            <img src="img\info-straw.webp" alt="strawberry">
                         </div>
                         <div class="detail-box">
                             <h5>
@@ -239,7 +101,7 @@
                     </div>
                     <div class="box">
                         <div class="img-box">
-                            <img src="img\info-sawi-pakcoy.jpg" alt="">
+                            <img src="img\info-sawi-pakcoy.jpg" alt="sawi-pakcoy">
                         </div>
                         <div class="detail-box">
                             <h5>
@@ -256,7 +118,7 @@
                     </div>
                     <div class="box">
                         <div class="img-box">
-                            <img src="img\info-bawang-prei.jpg" alt="">
+                            <img src="img\info-bawang-prei.jpg" alt="Bawang-Prei">
                         </div>
                         <div class="detail-box">
                             <h5>
@@ -280,7 +142,7 @@
         <section class="content" id="budidaya">
             <div class="budidaya">
                 <div class="img-box">
-                    <img src="img\budidaya.jpg" alt="">
+                    <img src="img\budidaya.jpg" alt="budidaya">
                 </div>
                 <div class="detail-box">
                     <div class="heading_container">
@@ -315,7 +177,7 @@
                 <div class="harga-container">
                     <div class="box">
                         <div class="img-box">
-                            <img src="img\harga-janda-bolong.jpg" alt="">
+                            <img src="img\harga-janda-bolong.jpg" alt="janda-bolong">
                         </div>
                         <div class="detail-box">
                             <h5>
@@ -333,7 +195,7 @@
                     </div>
                     <div class="box">
                         <div class="img-box">
-                            <img src="img\harga-lidah-mertua.jpg" alt="">
+                            <img src="img\harga-lidah-mertua.jpg" alt="lidah-mertua">
                         </div>
                         <div class="detail-box">
                             <h5>
@@ -351,7 +213,7 @@
                     </div>
                     <div class="box">
                         <div class="img-box">
-                            <img src="img\harga-kaktus.webp" alt="">
+                            <img src="img\harga-kaktus.webp" alt="kaktus">
                         </div>
                         <div class="detail-box">
                             <h5>
@@ -372,7 +234,7 @@
         </section>
         <!-- End Harga Pasar-->
 
-
+        <!-- Start Tentang Kami-->
         <section class="content" id="about">
             <article class="about">
                 <div class="content-title">
@@ -396,7 +258,9 @@
                 </div>
             </div>
         </section>
+        <!-- End Tentang Kami -->
 
+        <!-- Start Kontak -->
         <section id="contacts">
             <div class="content-title">
                 <h3 class="title">Hubungi Kami!</h3>
@@ -428,6 +292,7 @@
             </div>
             </div>
         </section>
+        <!--End Kontak-->
     </main>
 
     <!-- Start Footer -->
